--- a/index.html
+++ b/index.html
@@ -11,112 +11,7 @@
       referrerpolicy="no-referrer"
     />
     <title>Currency Converter</title>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-      }
-      body {
-        background-color: #f4d06f;
-        font-family: sans-serif;
-      }
-      h2 {
-        font-size: 30px;
-        background-color: black;
-        color: white;
-        height: 60px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 375px;
-        border-radius: 25px;
-        margin: 2px;
-        margin-bottom: 6px;
-        box-shadow: 1px 1px 3px 0px black;
-      }
-      .container {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        height: 600px;
-      }
-      form {
-        display: flex;
-        flex-direction: column;
-        width: 360px;
-        justify-content: center;
-        background-color: #fafafad6;
-        height: 400px;
-        border-radius: 10px;
-        padding: 10px;
-        margin: 2px;
-        box-shadow: 1px 1px 3px 0px black;
-      }
-      .i-class {
-        height: 70px;
-        display: flex;
-        align-items: center;
-      }
-      .amount {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-      .amount input {
-        border: 1px solid gray;
-        height: 20px;
-        width: 240px;
-        border-radius: 5px;
-        padding: 4px;
-      }
-      .dropdown {
-        display: flex;
-        width: 20px;
-      }
-      .main {
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        height: 200px;
-      }
-
-      .select-con img {
-        display: flex;
-        height: 50px;
-      }
-      .select-con select {
-        display: flex;
-        height: 20px;
-      }
-      .final {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 20px;
-        font-weight: bold;
-      }
-      .button {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin: 10px;
-      }
-      button {
-        height: 40px;
-        width: 100px;
-        border-radius: 5px;
-        border: 2px solid black;
-        color: whitesmoke;
-        background-color: black;
-        cursor: pointer;
-      }
-      .iam {
-        border: 2px solid black;
-        border-radius: 14px;
-        padding: 4px;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="container">
